# hermes-host-starter

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
android/: build.gradle  local.properties  settings.gradle
android/app/: build.gradle
android/app/hermes-engine/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  main.cpp
js/: index.js
src/: main.cpp  nativeobject.cpp  nativeobject.hpp
